[package]
name = "psst"
version = "0.1.2"
authors = ["Max Jacobson <max@hardscrabble.net>"]
readme  = "README.md"
description = "Library to be used in CLIs for storing secrets. It will prompt the user for input on the first invocation and remember it for later."
license = "MIT"
repository = "https://github.com/maxjacobson/psst"
keywords = ["secrets", "cli"]

[dependencies]
failure = "~0.1"
failure_derive = "~0.1"
log = "~0.4"
rprompt = "~2.0"
toml = "~0.7"
xdg = "~2.4"
