[package]
name = "psst"
edition = "2015"
version = "0.1.2"
authors = ["Max Jacobson <max@hardscrabble.net>"]
readme  = "README.md"
description = "Library to be used in CLIs for storing secrets. It will prompt the user for input on the first invocation and remember it for later."
license = "MIT"
repository = "https://github.com/maxjacobson/psst"
keywords = ["secrets", "cli"]

[dependencies]
anyhow = "1.0.97"
log = "~0.4"
rprompt = "~2.1"
thiserror = "2.0.12"
toml = "~0.8"
xdg = "~2.5"
